--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 fiona==1.8.20
 geopandas==0.10.2
-numpy==1.22.1
-pandas==1.3.5
-shapely==1.8.0
-tqdm==4.62.3
-requests==2.27.1
-OSMPythonTools==0.3.3
+momepy==0.8.4
 networkx==2.6.3
+numpy==1.22.1
+OSMPythonTools == 0.3.3
+pandas==1.4.0
+requests==2.27.1
+shapely==0.7.5
+tqdm==4.62.3
